[project]
name = "dnd-quest-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "chainlit>=2.9.6",
    "ddgs>=9.10.0",
    "duckdb>=1.4.4",
    "google-genai>=1.63.0",
    "google-generativeai>=0.8.6",
    "greenlet>=3.3.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "matplotlib>=3.10.8",
    "mcp>=1.26.0",
    "networkx>=3.6.1",
    "npm>=0.1.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pillow>=12.1.1",
    "wikipedia>=1.4.0",
]
